webserver/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver
  labels:
    app: webserver
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: webserver.deepvoid.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver
                port:
                  number: 4000
  tls:
    - hosts:
        - webserver.deepvoid.io
      secretName: webserver-deepvoid-io-tls
